# petorch

./: .gitignore  README.md  pyproject.toml
examples/: finetune_sd2_1_lora.py  finetune_sd2_lora.ipynb
examples/sd3/: sd3_notebook.ipynb
src/petorch/: __init__.py  dummy.py
src/petorch.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/petorch/adapter/: __init__.py  api.py  base.py  core.py  test.ipynb
src/petorch/experiments/: checkpoints.py
src/petorch/experiments/callbacks/: debugger.py  output_eval.py
src/petorch/experiments/loggers/: __init__.py  base.py  clearml.py  clearml_.py  comet.py
src/petorch/integrations/: __init__.py
src/petorch/integrations/diffusers/: module.ipynb  stable_diffusion.py
src/petorch/modules/diffusions/: data.ipynb  module.ipynb  stable_diffusion.py  stable_diffusion_3.ipynb
src/petorch/prebuilt/: configs.py  dummy.py
src/petorch/prebuilt/adapters/lora/: __init__.py  base.py  conv.py  embedding.py  linear.py  lora.ipynb
src/petorch/prebuilt/configs/: __init__.py  configs.py  lora.py
src/petorch/prebuilt/lora/: __init__.py  linear.py  lora.ipynb
src/petorch/quantization/: api.py  core.py  quantization.py
src/petorch/utilities/: __init__.py  data.py  dummy.py  func.py  logger.py  modules.py
tests/: mre.py
tests/adapter/: test_base_and_api.py
tests/adapter/test_lora/: test_linear.py
tests/modules/diffusions/: test_stable_diffusion.py
tests/prebuilt/adapters/lora/: test_conv.py  test_embedding.py  test_linear.py
tests/prebuilt/lora/: test_linear.py
